--- a/src/CS22310/css/bootstrap.css
+++ b/src/CS22310/css/bootstrap.css
@@ -4925,6 +4925,7 @@ a.thumbnail.active {
   margin-bottom: 20px;
   border: 1px solid transparent;
   border-radius: 4px;
+  display:inline-block;
 }
 .alert h4 {
   margin-top: 0;
